Feat(ConfirmEmail): add endpoint confirm email and move login
